--- a/manpages/es/live-config.es.7
+++ b/manpages/es/live-config.es.7
@@ -1,5 +1,5 @@
 .\" live-config(7) - System Configuration Components
-.\" Copyright (C) 2006-2014 Daniel Baumann <mail@daniel-baumann.ch>
+.\" Copyright (C) 2006-2015 Daniel Baumann <mail@daniel-baumann.ch>
 .\"
 .\" This program comes with ABSOLUTELY NO WARRANTY; for details see COPYING.
 .\" This is free software, and you are welcome to redistribute it
@@ -11,7 +11,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-CONFIG 7 2015\-01\-04 4.0.4\-1 "Proyecto Live Systems"
+.TH LIVE\-CONFIG 7 2015\-09\-23 5.0~a5\-1 "Proyecto Live Systems"
 
 .SH NOMBRE
 \fBlive\-config\fP \- Componentes de configuración del sistema
@@ -201,10 +201,10 @@ el usuario debe asegurarse de crear todas las variables necesarias para
 tener una configuración válida.
 .PP
 Los ficheros de configuración se pueden colocar en el sistema de ficheros
-raíz (/etc/live/config.conf, /etc/live/config/*), o en el medio en vivo
-(live/config.conf, live/config/*). Si ambos directorios se utilizan para una
-determinada opción, la del medio en vivo tienen prioridad sobre la del
-sistema de ficheros raíz.
+raíz (/etc/live/config.conf, /etc/live/config.conf.d/*.conf), o en el medio
+en vivo (live/config.conf, live/config.conf.d/*.conf). Si ambos directorios
+se utilizan para una determinada opción, la del medio en vivo tienen
+prioridad sobre la del sistema de ficheros raíz.
 .PP
 Aunque los ficheros de configuración situados en los directorios de
 configuración no requieren un nombre o sufijo en concreto, se sugiere, por
@@ -340,6 +340,8 @@ configura el inicio de sesión automático en slim.
 configura el inicio de sesión automático con xinit.
 .IP \fBkeyboard\-configuration\fP 4
 configura el teclado.
+.IP \fBsystemd\fP 4
+configura el inicio de sesión automático con systemd.
 .IP \fBsysvinit\fP 4
 configura sysvinit.
 .IP \fBsysv\-rc\fP 4
@@ -358,8 +360,6 @@ Impide que el salvapantallas bloquee la pantalla.
 Desactiva el asistente de migración de KDE (Squeeze y superior).
 .IP \fBkde\-services\fP 4
 Desactiva algunos servicios de KDE no deseados (squeeze y superior).
-.IP \fBdebian\-installer\-launcher\fP 4
-añade un icono del instalador de debian en el escritorio del usuario.
 .IP \fBpolicykit\fP 4
 garantiza privilegios de usuario mediante policykit.
 .IP \fBssl\-cert\fP 4
@@ -374,8 +374,6 @@ Desactiva lastlog.
 configura xserver\-xorg.
 .IP \fBbroadcom\-sta\fP 4
 configura el controlador broadcom\-sta WLAN.
-.IP "\fBureadahead\fP (ubuntu solamente)" 4
-Desactiva ureadahead.
 .IP \fBopenssh\-server\fP 4
 Recrea las claves del host openssh\-server.
 .IP \fBxfce4\-panel\fP 4
@@ -388,9 +386,9 @@ el medio en vivo o en un servidor http/ftp.
 
 .SH FICHEROS
 .IP \fB/etc/live/config.conf\fP 4
-.IP \fB/etc/live/config/*\fP 4
+.IP \fB/etc/live/config.conf.d/*.conf\fP 4
 .IP \fBlive/config.conf\fP 4
-.IP \fBlive/config/*\fP 4
+.IP \fBlive/config.conf.d/*.conf\fP 4
 .IP \fB/lib/live/config.sh\fP 4
 .IP \fB/lib/live/config/\fP 4
 .IP \fB/var/lib/live/config/\fP 4
